--- a/Opiniometro_WebApp/Opiniometro_WebApp/Web.config
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-  <!--<add name="Opiniometro_DatosEntities" connectionString="metadata=res://*/Models.OpiniometroModel.csdl|res://*/Models.OpiniometroModel.ssdl|res://*/Models.OpiniometroModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=Opiniometro_Datos;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />--><add name="Opiniometro_DatosEntities" connectionString="metadata=res://*/Models.OpiniometroModel.csdl|res://*/Models.OpiniometroModel.ssdl|res://*/Models.OpiniometroModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=JOSE-ANDRES\SQLEXPRESS;initial catalog=Opiniometro_Datos;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <add name="Opiniometro_DatosEntities" connectionString="metadata=res://*/Models.OpiniometroModel.csdl|res://*/Models.OpiniometroModel.ssdl|res://*/Models.OpiniometroModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=Opiniometro_Datos;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
