--- a/Opiniometro_WebApp/Opiniometro_WebApp/Opiniometro_WebApp.csproj
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Opiniometro_WebApp.csproj
@@ -169,7 +169,6 @@
     <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
-    <Compile Include="Controllers\Conformado_Item_Sec_FormController.cs" />
     <Compile Include="Controllers\FormularioController.cs" />
     <Compile Include="Controllers\Formulario_RespuestaController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -340,7 +339,9 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -373,11 +374,6 @@
     <Content Include="Views\Seccion\Details.cshtml" />
     <Content Include="Views\Seccion\Edit.cshtml" />
     <Content Include="Views\Seccion\Index.cshtml" />
-    <Content Include="Views\Conformado_Item_Sec_Form\Create.cshtml" />
-    <Content Include="Views\Conformado_Item_Sec_Form\Delete.cshtml" />
-    <Content Include="Views\Conformado_Item_Sec_Form\Details.cshtml" />
-    <Content Include="Views\Conformado_Item_Sec_Form\Edit.cshtml" />
-    <Content Include="Views\Conformado_Item_Sec_Form\Index.cshtml" />
     <Content Include="Views\Texto_Libre\Create.cshtml" />
     <Content Include="Views\Texto_Libre\Delete.cshtml" />
     <Content Include="Views\Texto_Libre\Details.cshtml" />
