Se selecciona perfil
El perfil seleccionado ya llega al controlador después de que el usuario lo elige, también se incluye el procedimiento almacenado de un perfil del usuario

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Opiniometro_WebApp.csproj
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Opiniometro_WebApp.csproj
@@ -265,6 +265,7 @@
     <Compile Include="Models\Perfil.cs">
       <DependentUpon>OpiniometroModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\PerfilesUsuario.cs" />
     <Compile Include="Models\Permiso.cs">
       <DependentUpon>OpiniometroModel.tt</DependentUpon>
     </Compile>
